Consolidate edit screen lists.