@@ -22,7 +22,6 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class EditScreen extends AbstractLayersScreen {
 
@@ -30,8 +29,8 @@ public class EditScreen extends AbstractLayersScreen {
     public AbstractWidget controlReturn;
     public AbstractWidget optionOffsetX;
     public AbstractWidget optionOffsetY;
-    public SelectedLayerList leftList;
-    public AvailableLayerList rightList;
+    public TransferableLayerList leftList;
+    public TransferableLayerList rightList;
 
     public EditScreen(Screen parent) {
         super(parent, 3, 1);
@@ -43,7 +42,7 @@ public class EditScreen extends AbstractLayersScreen {
                 .filter(groupedLayerName -> LayerRegistry.LAYERS
                         .contains(ResourceLocation.tryParse(groupedLayerName)))
                 .map(ResourceLocation::tryParse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<ResourceLocation> listAvailableLayers() {
@@ -106,14 +105,14 @@ public class EditScreen extends AbstractLayersScreen {
 
     @Override
     public void addLeftList() {
-        leftList = new SelectedLayerList(minecraft, this, listWidth, leftListHeight, leftListY);
+        leftList = new TransferableLayerList(minecraft, this, false, listWidth, leftListHeight, leftListY);
 
         addRenderableWidget(leftList);
     }
 
     @Override
     public void addRightList() {
-        rightList = new AvailableLayerList(minecraft, this, listWidth, rightListHeight, rightListY);
+        rightList = new TransferableLayerList(minecraft, this, true, listWidth, rightListHeight, rightListY);
 
         addRenderableWidget(rightList);
     }
@@ -213,16 +212,24 @@ public class EditScreen extends AbstractLayersScreen {
         }
     }
 
-    public class SelectedLayerList extends AbstractLayerList<SelectedLayerList.Entry> {
+    public class TransferableLayerList extends AbstractLayerList<TransferableLayerList.Entry> {
 
-        public SelectedLayerList(Minecraft minecraft, EditScreen parent, int width, int height, int y) {
+        private final boolean available;
+
+        public TransferableLayerList(Minecraft minecraft, EditScreen parent, boolean available, int width, int height, int y) {
             super(minecraft, parent, width, height, y);
+            this.available = available;
+            setEntries();
         }
 
         @Override
         public void setEntries() {
             clearEntries();
-            listSelectedLayers().forEach(layerName -> addEntry(new Entry(layerName)));
+            (isAvailable() ? listAvailableLayers() : listSelectedLayers()).forEach(layerName -> addEntry(new Entry(layerName)));
+        }
+
+        public boolean isAvailable() {
+            return available;
         }
 
         public class Entry extends AbstractLayerList.Entry<Entry> {
@@ -238,7 +245,7 @@ public class EditScreen extends AbstractLayersScreen {
                 int i = mouseX - left;
                 if (isMouseOver(mouseX, mouseY)) {
                     guiGraphics.blitSprite(
-                            new ResourceLocation(Raised.MOD_ID, "transferable_list/unselect" + (i < ENTRY_HEIGHT ? "_highlighted" : "")),
+                            new ResourceLocation(Raised.MOD_ID, "layer_list/" + (isAvailable() ? "" : "un") + "select" + (i < ENTRY_HEIGHT ? "_highlighted" : "")),
                             left,
                             top,
                             ENTRY_HEIGHT,
@@ -256,7 +263,11 @@ public class EditScreen extends AbstractLayersScreen {
                 int relX = (int) mouseX - getEntryX(this);
                 int relY = (int) mouseY - getEntryY(this);
                 if (relX >= 0 && relX < ENTRY_HEIGHT && relY >= 0 && relY < ENTRY_HEIGHT) {
-                    Config.update(o -> o.getGroups().get(getCurrentGroup().getGroupName()).getLayers().remove(this.getLayerName().toString()));
+                    if (isAvailable()) {
+                        Config.update(o -> o.getGroups().get(getCurrentGroup().getGroupName()).getLayers().add(getLayerName().toString()));
+                    } else {
+                        Config.update(o -> o.getGroups().get(getCurrentGroup().getGroupName()).getLayers().remove(getLayerName().toString()));
+                    }
                     resetLeftList();
                     resetRightList();
                     return true;
@@ -267,69 +278,7 @@ public class EditScreen extends AbstractLayersScreen {
             @Override
             public void setSelected(boolean selected) {
                 if (selected) {
-                    SelectedLayerList.this.setSelected(this);
-                }
-            }
-
-        }
-
-    }
-
-    public class AvailableLayerList extends AbstractLayerList<AvailableLayerList.Entry> {
-
-        public AvailableLayerList(Minecraft minecraft, EditScreen parent, int width, int height, int y) {
-            super(minecraft, parent, width, height, y);
-        }
-
-        @Override
-        public void setEntries() {
-            clearEntries();
-            listAvailableLayers().forEach(layerName -> addEntry(new Entry(layerName)));
-        }
-
-        public class Entry extends AbstractLayerList.Entry<Entry> {
-
-            public Entry(ResourceLocation layerName) {
-                super(layerName);
-            }
-
-            @Override
-            public void render(GuiGraphics guiGraphics, int index, int top, int left, int width, int height, int mouseX, int mouseY, boolean hovering, float partialTick) {
-                super.render(guiGraphics, index, top, left, width, height, mouseX, mouseY, hovering, partialTick);
-
-                int i = mouseX - left;
-                if (isMouseOver(mouseX, mouseY)) {
-                    guiGraphics.blitSprite(
-                            new ResourceLocation(Raised.MOD_ID, "transferable_list/select" + (i < ENTRY_HEIGHT ? "_highlighted" : "")),
-                            left,
-                            top,
-                            ENTRY_HEIGHT,
-                            ENTRY_HEIGHT);
-                }
-            }
-
-            @Override
-            public String entryText() {
-                return Parse.parsePath(layerName.getPath());
-            }
-
-            @Override
-            public boolean handleClick(final double mouseX, final double mouseY, final int button) {
-                int relX = (int) mouseX - getEntryX(this);
-                int relY = (int) mouseY - getEntryY(this);
-                if (relX >= 0 && relX < ENTRY_HEIGHT && relY >= 0 && relY < ENTRY_HEIGHT) {
-                    Config.update(o -> o.getGroups().get(getCurrentGroup().getGroupName()).getLayers().add(this.getLayerName().toString()));
-                    resetLeftList();
-                    resetRightList();
-                    return true;
-                }
-                return false;
-            }
-
-            @Override
-            public void setSelected(boolean selected) {
-                if (selected) {
-                    AvailableLayerList.this.setSelected(this);
+                    TransferableLayerList.this.setSelected(this);
                 }
             }
 
